# MGET

./: .gitignore  .readthedocs.yaml  BUILD.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  publish-to-pypi.yml  publish-to-testpypi.yml  test-data-products.yaml  test-data-products.yml  test-skfmm.yml  test-windows-feather-problem.yml
badges/: Badges_URLs.txt
doc/Development/: .gitignore  Python_2_to_3_issues.txt
doc/GeoEco/: ArcGISToolboxExamples.rst  Index.rst  InternalAPI.rst  LinuxWithArc.rst  LinuxWithoutArc.rst  PublicAPI.rst  PythonExamples.rst  WindowsWithArc.rst  WindowsWithArcDesktop.rst  WindowsWithoutArc.rst  conf.py  index.rst  requirements.txt
doc/GeoEco/ArcToolboxExamples/: ArcInvokingR.rst  ArcSimulatingLarvalDispersal.rst
doc/GeoEco/Development/: BuildingWheels.rst  Testing.rst
doc/GeoEco/PythonExamples/: PythonInvokingR.rst
src/GeoEco/: .gitignore  ArcGIS.py  ArcToolbox.py  BatchProcessing.py  Dependencies.py  DocutilsToEsriXdoc.xsl  Exceptions.py  Internationalization.py  Logging.py  Metadata.py  MetadataUtils.cpp  Python_2_to_3_issues.txt  _MetadataUtils.cpp  __init__.py
src/GeoEco/Configuration/: Logging.ini
src/GeoEco/Connectivity/: LarvalDispersal.py  __init__.py
src/GeoEco/DataManagement/: ArcGISRasters.py  Directories.py  Fields.py  Files.py
src/GeoEco/DataProducts/: CMEMS.py  __init__.py
src/GeoEco/Datasets/: NetCDF.py  SQLite.py  _CollectibleObject.py  _CollectibleObjectMetadata.py  _Cursors.py  _CursorsMetadata.py  _Database.py  (+12 more)
test/helpers/: matlab.py
(+149 files in other folders)
