[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mget3"
authors = [
    {name = "Jason Roberts", email = "jason.roberts@duke.edu"},
]
description = "Marine Geospatial Ecology Tools: access and manipulate ecological and oceanographic data"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["marine", "geospatial", "ecology", "gis"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Oceanography"
]

dependencies = [
    "docutils",
    "gdal",
    "numpy",
    "pyparsing",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jjrob/MGET"

[tool.setuptools_scm]
version_file = "src/GeoEco/_version.py"

[tool.setuptools.package-data]
"GeoEco.Configuration" = ["Logging.ini"]
